# pyrimidine

./: .gitignore  .readthedocs.yaml  .travis.yml  1  CNAME  LICENSE  Pyrimidine(article).md  README.md  paper(Chinese).md  paper.md  pyproject.toml  pyproject.toml.backup.toml  pyrimidine-paper(Chinese).md  pyrimidine-paper.md  pytest.ini  requirements.txt  setup.py  text.md  travis.yml
.github/workflows/: draft-pdf.yml  pytest.yml
.travis/: run.py  test.py
docs/: conf.py  index.rst  requirements.txt
docs/_build/: genindex.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/.doctrees/: environment.pickle
docs/_build/.doctrees/source/: Customization.doctree  Helpers.doctree  pyrimidine.doctree
docs/_build/_sources/source/: Customization.md.txt  pyrimidine.benchmarks.rst.txt
docs/_build/source/: API Design.html  Customization.html  Install.html  index.html  modules.html  pyrimidine.benchmarks.html  pyrimidine.html  pyrimidine.learn.html  pyrimidine.local_search.html
docs/_static/: custom.css
docs/source/: API Design.md  API Reference.md  Costumize.md  Customization.md  Developers.md  Examples.md  Helpers.md  Home.md  Install.md  Media.md  Misc.md  More.md  Release History.md  conf.py  example1.py  index.rst  modules.rst  pyrimidine.benchmarks.rst  pyrimidine.learn.rst  pyrimidine.local_search.rst  pyrimidine.rst
docs/source/_build/: API Design.html  Customization.html  Customize.html  Developers.html  Examples.html  Helpers.html  Home.html  Install.html  Release History.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyrimidine.benchmarks.html  pyrimidine.html  pyrimidine.learn.html  pyrimidine.local_search.html  search.html  searchindex.js
docs/source/_build/.doctrees/: API Design.doctree  Customization.doctree  Customize.doctree  Developers.doctree  Examples.doctree  Helpers.doctree  Home.doctree  Install.doctree  Release History.doctree  environment.pickle  index.doctree  modules.doctree  pyrimidine.benchmarks.doctree  pyrimidine.doctree  pyrimidine.learn.doctree  pyrimidine.local_search.doctree
docs/source/_build/_sources/: Developers.md.txt  Examples.md.txt  Release History.md.txt  index.rst.txt  pyrimidine.learn.rst.txt
examples/: comparison-ba.py  comparison-de.py  comparison-gp.py  comparison-hof.py  comparison-memory.py  comparison-modified.py  comparison-proba.py  comparison-sa.py  comparison-sma.py  comparison-trait.py  comparison0.py  comparison1.py  comparison2.py  comparison3.py  comparison4.py  comparison5.py  example-aco.py  example-comparison0.py  example-comparison1.py  example-ep.py  example-ep2.py  example-es.py  example-game.py  example-gsa.py  example-hybridpopulation.py  example-local1.py  example-local2.py  example-local3.py  example-local4.py  example-local5 copy.py  example-local5.py  example-modified.py  example-multipopulation.py  example-nmf.py  example-opt.py  example-pso copy.py  example-pso-path.py  example-pso.py  example-sa.py  example-species.py  (+27 more)
paper/: example.py  paper.bib  paper.md
pyrimidine/: __init__.py  _stat.py  aco.py  ba.py  base.py  chromosome.py  de.py  deco.py  ep.py  errors.py  es.py  fa.py  gene.py  gsa.py  individual.py  llga.py  meta.py  mixin.py  multipopulation.py  optimize.py  parallel.py  population.py  pso.py  qga.py  saga.py  sma.py  species.py  ssa.py  studga.py  trait_ga.py  utils.py
pyrimidine/benchmarks/: __init__.py  approximation.py  base.py  cluster.py  fitting.py  linear_model.py  matrix.py  neural_network.py  optimization.py  others.py  special.py
pyrimidine/examples/: example-local1.py  example-local2.py  example-local3.py  example-local4.py  example0.py  example1.py  example10.py  example11.py  example12.py  example13.py  example14.py  example15.py  example16.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example9.py  example_pso.py  h.csv  h1.csv  hehe.csv
pyrimidine/learn/: __init__.py  base.py  cluster.py  linear_regression.py  neural_network.py  regression.py  test.py
pyrimidine/local_search/: __init__.py  random_walk.py  simulated_annealing.py  tabu_search.py
pyrimidine/misc/: __init__.py  aco.py  ba.py  fa.py  gsa.py  sma.py  ssa.py
pyrimidine/pyrimidine/: README.md  __init__.py  base.py  chromosome.py  gene.py  individual.py  trait_ga.py
pyrimidine/pyrimidine/benchmarks/: approximation.py  matrix.py  special.py
pyrimidine/pyrimidine/examples/: example-local1.py  example-local3.py  example0.py  example1.py  example12.py  example15.py  example4.py  example5.py  example6.py  example7.py
pyrimidine/pyrimidine/local_search/: __init__.py  random_walk.py  simulated_annealing.py  tabu_search.py
tests/: conftest.py  model.pkl  test.py  test_chromosome.py  test_de.py  test_deco.py  test_ep.py  test_ga.py  test_import.py  test_individual.py  test_iteration.py  test_learn.py  test_meta.py  test_mixin.py  test_multipopulation.py  test_optimize.py  test_parallel.py  test_population.py  test_pso.py  test_sa.py  test_utils.py
