[tool.poetry]
name = "pyrimidine"
version = "1.7.3"
description = "A competitive framework tailored for GA, crafted with an emphasis on OOP and Algebra-Inspired Programming."
authors = ["William Song <30965609+Freakwill@users.noreply.github.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/Freakwill/pyrimidine"
repository = "https://github.com/Freakwill/pyrimidine"
keywords = ["Genetic Algorithm", "Artificial Intelligence", "Intelligent Optimization"]
classifiers = [
    "Environment :: MacOS X",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
scipy = "^1.12.0"
pandas = "^2.1.0"
toolz = "^0.12.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.0"
# for Statistics (Optional)
# ezstat = "2.2"
# for encoding the numbers to genes (Optional)
# digit_converter = "2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry>=1.0"]
# build-backend = "poetry.masonry.api"
