[project]
name = "pyrimidine"
dynamic = [ "version" ]
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Freakwill", email = "Williamxxoo@gmail.com" }
]
description = "An extensible framework of genetic algorithm by Python. It is designed based on OOP and 'Algebra-insprited' what I call it."
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "Genetic algorithm",
    "Evolutionary algorithms",
    "Stochastic Optimization",
    "Iterative algorithms",
    "Algebra-insprited Programming",
    "Meta Programming"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
homepage = "https://github.com/Freakwill/pyrimidine"
repository = "https://github.com/Freakwill/pyrimidine"
documentation = "https://pyrimidine.readthedocs.io/en/latest/"

[tool.poetry]
version = "1.7.5"
long_description_content_type = "text/markdown"
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
scipy = "^1.12.0"
pandas = "^2.1.0"
toolz = "^0.12.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.0"
# for Statistics (Optional)
# ezstat = "2.2"
# for encoding the numbers to genes (Optional)
# digit_converter = "2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=2.0"]
# build-backend = "poetry.core.masonry.api"
